Fixed header spacing

--- a/src/header.css
+++ b/src/header.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Fira+Sans|PT+Serif:700");
 #header {
-  padding: 10px;
+  padding: 25px;
+  margin-bottom: 40px;
+  height: 35px;
 }
 #header #logo {
   position: absolute;
